--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 pythonbin = \#!/home/xiaodongli/software/anaconda/bin/python
-EXEs = ../bin/py_helloworld  ../bin/py_Plot  ../bin/uws_download ../bin/uws_id  ../bin/uws_show  ../bin/uws_submit ../bin/uws_mergefiles
+EXEs = ../bin/py_helloworld  ../bin/py_Plot  ../bin/uws_download ../bin/uws_id  ../bin/uws_show  ../bin/uws_submit ../bin/uws_mergefiles ../bin/checkxyzwfiles ../bin/py_ran ../bin/uws_checkrun ../bin/py_stat
 
 all: $(EXEs)
 default: $(EXEs)
@@ -9,6 +9,10 @@ default: $(EXEs)
 	echo '${pythonbin}' >> ../bin/$*
 	cat  $*.py >> ../bin/$*
 	chmod a+x ../bin/$*
+
+../bin/%: %.sh
+	cp $*.sh ../bin/$*.sh
+	chmod a+x ../bin/$*.sh
 		
 clean :
 	rm -rf ${EXEs}
